--- a/index.html
+++ b/index.html
@@ -33,13 +33,10 @@
                         <div class="navbar-end">
                             <a class="navbar-item has-text-black is-uppercase" href="#about"> О&nbsp;нас </a>
                             <a class="navbar-item has-text-black is-uppercase" href="#services"> Услуги </a>
-                            <!-- <a class="navbar-item has-text-black is-uppercase" href="#benefits"> Преимущества </a> -->
                             <a class="navbar-item has-text-black is-uppercase" href="#research"> Исследования </a>
                             <a class="navbar-item has-text-black is-uppercase" href="#feedback"> Отзывы </a>
-                            <!-- <a class="navbar-item has-text-black is-uppercase" href="#partners"> Партнеры </a> -->
-                            <!-- <a class="navbar-item has-text-black is-uppercase" href="#contacts"> Контакты </a> -->
                             <a class="navbar-item has-text-black is-uppercase"
-                                href="https://t.me/FarangizaShukasheva?start=Здравствуйте, хочу заказать исследование"
+                                href="https://t.me/+77066396195"
                                 target="_blank"> Заказать исследование </a>
                         </div>
                     </div>
@@ -112,9 +109,9 @@
                                     и&nbsp;потенциальных клиентов
                                 </p>
                                 <a class="button is-white is-outlined is-rounded"
-                                    href="https://t.me/FarangizaShukasheva?start=Здравствуйте, хочу заказать исследование"
+                                    href="https://t.me/+77066396195"
                                     target="_blank">Заказать исследование</a>
-                                    <p class="is-hidden-tablet"></p>
+                                <p class="is-hidden-tablet"></p>
                             </div>
                         </div>
                         <button class="flip-icon" onclick="toggleIcon(this)">
@@ -142,9 +139,9 @@
                                     в&nbsp;ходе опроса или анкетирования
                                 </p>
                                 <a class="button is-white is-outlined is-rounded"
-                                    href="https://t.me/FarangizaShukasheva?start=Здравствуйте, хочу заказать исследование"
+                                    href="https://t.me/+77066396195"
                                     target="_blank">Заказать исследование</a>
-                                    <p class="is-hidden-tablet"></p>
+                                <p class="is-hidden-tablet"></p>
                             </div>
                         </div>
                         <button class="flip-icon" onclick="toggleIcon(this)">
@@ -174,9 +171,9 @@
                                     компании
                                 </p>
                                 <a class="button is-white is-outlined is-rounded"
-                                    href="https://t.me/FarangizaShukasheva?start=Здравствуйте, хочу заказать исследование"
+                                    href="https://t.me/+77066396195"
                                     target="_blank">Заказать исследование</a>
-                                    <p class="is-hidden-tablet"></p>
+                                <p class="is-hidden-tablet"></p>
                             </div>
                         </div>
                         <button class="flip-icon" onclick="toggleIcon(this)">
@@ -265,7 +262,7 @@
                                 <a class="button is-white is-outlined is-rounded"
                                     href="https://drive.google.com/file/d/1IMOwVtlZxT2k97EwSGhIp5JKKlstMzDi/view"
                                     target="_blank">Скачать исследование</a>
-                                    <p class="is-hidden-tablet"></p>
+                                <p class="is-hidden-tablet"></p>
                             </div>
                         </div>
                         <button class="flip-icon" onclick="toggleIcon(this)">
@@ -293,7 +290,7 @@
                                 <a class="button is-white is-outlined is-rounded"
                                     href="https://drive.google.com/file/d/1E1ZcD_n2uKBhiqBezTU05gEbQlNpXNJk/view"
                                     target="_blank">Скачать исследование</a>
-                                    <p class="is-hidden-tablet"></p>
+                                <p class="is-hidden-tablet"></p>
                             </div>
                         </div>
                         <button class="flip-icon" onclick="toggleIcon(this)">
@@ -321,7 +318,7 @@
                                 <a class="button is-white is-outlined is-rounded"
                                     href="https://drive.google.com/file/d/1KTiYfIITLTVd-niElvJmANgxosF56pCT/view"
                                     target="_blank">Скачать исследование</a>
-                                    <p class="is-hidden-tablet"></p>
+                                <p class="is-hidden-tablet"></p>
                             </div>
                         </div>
                         <button class="flip-icon" onclick="toggleIcon(this)">
@@ -350,7 +347,7 @@
                                 <a class="button is-white is-outlined is-rounded"
                                     href="https://drive.google.com/file/d/1XLH2M8siL9mjjlCgyAHlsvjm7ajfBpu5/view"
                                     target="_blank">Скачать исследование</a>
-                                    <p class="is-hidden-tablet"></p>
+                                <p class="is-hidden-tablet"></p>
                             </div>
                         </div>
                         <button class="flip-icon" onclick="toggleIcon(this)">
@@ -377,7 +374,7 @@
                                 <a class="button is-white is-outlined is-rounded"
                                     href="https://drive.google.com/file/d/1kcNDinL1lr5RueZKKWmKS41pSVjuydLu/view"
                                     target="_blank">Скачать исследование</a>
-                                    <p class="is-hidden-tablet"></p>
+                                <p class="is-hidden-tablet"></p>
                             </div>
                         </div>
                         <button class="flip-icon" onclick="toggleIcon(this)">
@@ -641,7 +638,7 @@
                 <a class="tag" href="#benefits"> Преимущества </a>
                 <a class="tag" href="#research"> Исследования </a>
                 <a class="tag" href="#feedback"> Отзывы </a>
-                <a class="tag" href="https://t.me/FarangizaShukasheva?start=Здравствуйте, хочу заказать исследование"
+                <a class="tag" href="https://t.me/+77066396195"
                     target="_blank"> Заказать исследование <svg width="21" height="23" viewBox="0 0 21 23" fill="none"
                         xmlns="http://www.w3.org/2000/svg">
                         <g clip-path="url(#clip0_379_44)">
@@ -684,7 +681,7 @@
                 <button class="delete" aria-label="close"></button>
             </header>
             <section class="modal-card-body">
-                <img src="src/docs/almau.pdf" />
+                <img src="src/docs/almau.jpeg" />
             </section>
             <footer class="modal-card-foot">
             </footer>
@@ -697,7 +694,7 @@
                 <button class="delete" aria-label="close"></button>
             </header>
             <section class="modal-card-body">
-                <img src="src/docs/alphauz.pdf" />
+                <img src="src/docs/alphauz.jpeg" />
             </section>
             <footer class="modal-card-foot">
             </footer>
@@ -710,7 +707,7 @@
                 <button class="delete" aria-label="close"></button>
             </header>
             <section class="modal-card-body">
-                <img src="src/docs/jusan.pdf" />
+                <img src="src/docs/jusan.jpeg" />
             </section>
             <footer class="modal-card-foot">
             </footer>
@@ -723,7 +720,7 @@
                 <button class="delete" aria-label="close"></button>
             </header>
             <section class="modal-card-body">
-                <img src="src/docs/tatishev.pdf" />
+                <img src="src/docs/tatishev.jpeg" />
             </section>
             <footer class="modal-card-foot">
             </footer>
@@ -736,7 +733,7 @@
                 <button class="delete" aria-label="close"></button>
             </header>
             <section class="modal-card-body">
-                <img src="src/docs/americancouncil.pdf" />
+                <img src="src/docs/americancouncil.jpeg" />
             </section>
             <footer class="modal-card-foot">
             </footer>
