--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru" data-theme="light">
+<html>
 
 <head>
     <meta charset="utf-8">
@@ -13,6 +13,20 @@
 
     <script src="src/js/webfont.js"></script>
     <script>document.documentElement.className = "js";</script>
+    <script>
+        window.location.href = "/";
+
+        if (window.sessionStorage.path) {
+            let path = window.sessionStorage.path;
+            window.history.pushState(null, null, path);
+            window.sessionStorage.removeItem('path');
+
+        } else {
+            let path = window.location.pathname;
+            window.sessionStorage.path = path;
+            window.location.href = '/';
+        }
+    </script>
 </head>
 
 <body>
