--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@
                         <p>Контакты</p>
                     </div>
                     <p class="has-text-black is-black is-size-3">email: <a
-                            href="mailto:info@zimablue.org?subject=Здравствуйте, хочу заказать исследование"
+                            href="mailto:info@zimablue.org?subject=Здравствуйте, хочу заказать исследование&cc=farangizashukasheva@gmail.com"
                             target="_blank" class="text-links">info@zimablue.org</a></p>
                     <p class="has-text-black is-black is-size-3">instagram: <a
                             href="https://www.instagram.com/zimablue.co/" target="_blank"
