--- a/index.html
+++ b/index.html
@@ -330,7 +330,31 @@
                 </div>
             </div>
             <div class="columns">
-                <div class="column is-hidden-mobile"></div>
+                <div class="column">
+                    <div class="flip-card cards-service">
+                        <div class="flip-card-inner">
+                            <div
+                                class="flip-card-front is-flex is-flex-direction-column is-justify-content-space-between">
+                                <p class="title">
+                                    Влияние на&nbsp;покупательские решения и&nbsp;<i>узнаваемость бренда</i>
+                                </p>
+                            </div>
+                            <div
+                                class="flip-card-back is-flex is-flex-direction-column is-justify-content-space-between">
+                                <p class="subtitle has-text-white">
+                                    Исследование влияния маркетинга с&nbsp;участием инфлюенсеров на&nbsp;покупательские решения и&nbsp;узнаваемость брендаИсследование влияния маркетинга с&nbsp;участием инфлюенсеров на&nbsp;покупательские решения и&nbsp;узнаваемость бренда
+                                </p>
+                                <a class="button is-white is-outlined is-rounded"
+                                    href="https://drive.google.com/file/d/1GcpmWFDdWpP3ZgB2VpQF5fAfd_7Ao37r/view"
+                                    target="_blank">Скачать исследование</a>
+                                <p class="is-hidden-tablet"></p>
+                            </div>
+                        </div>
+                        <button class="flip-icon" onclick="toggleIcon(this)">
+                            <span class="icon ignoreMe"></span>
+                        </button>
+                    </div>
+                </div>
                 <div class="column">
                     <div class="flip-card cards-service">
                         <div class="flip-card-inner">
@@ -423,7 +447,7 @@
                         <div class="cards-service">
                             <div class="is-flex is-flex-direction-column is-justify-content-space-between">
                                 <p class="title">
-                                    Организация показала высокий уровень проффесионализма и&nbsp;компетентности
+                                    Организация показала высокий уровень професионализма и&nbsp;компетентности
                                     в&nbsp;аспектах продвижения проектов в&nbsp;онлайн среде
                                 </p>
                                 <p class="subtitle">
