--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                                     возрастная категория считает гендерное равенство важной проблемой для бизнеса
                                 </p>
                                 <a class="button is-white is-outlined is-rounded"
-                                    href="https://drive.google.com/file/d/1KTiYfIITLTVd-niElvJmANgxosF56pCT/view"
+                                    href="https://drive.google.com/file/d/11XrglK6ucMtfzuvp-t6n_XHD77mc-7P2/view?usp=sharing"
                                     target="_blank">Скачать исследование</a>
                                 <p class="is-hidden-tablet"></p>
                             </div>
@@ -371,7 +371,7 @@
                                     от&nbsp;заработной платы занимает ежемесячный платеж?
                                 </p>
                                 <a class="button is-white is-outlined is-rounded"
-                                    href="https://drive.google.com/file/d/1XLH2M8siL9mjjlCgyAHlsvjm7ajfBpu5/view"
+                                    href="https://drive.google.com/file/d/1UyUjvfAOSuIH1AtopdgcXvIP3KNy0GSe/view?usp=sharing"
                                     target="_blank">Скачать исследование</a>
                                 <p class="is-hidden-tablet"></p>
                             </div>
