--- a/index.html
+++ b/index.html
@@ -647,8 +647,8 @@
                         <p>Контакты</p>
                     </div>
                     <p class="has-text-black is-black is-size-3">email: <a
-                            href="mailto:info@zimablue.org?subject=Здравствуйте, хочу заказать исследование&cc=farangizashukasheva@gmail.com"
-                            target="_blank" class="text-links">info@zimablue.org</a></p>
+                            href="mailto:info@zimablue.net?subject=Здравствуйте, хочу заказать исследование&cc=farangizashukasheva@gmail.com"
+                            target="_blank" class="text-links">info@zimablue.net</a></p>
                     <p class="has-text-black is-black is-size-3">instagram: <a
                             href="https://www.instagram.com/zimablue.co/" target="_blank"
                             class="text-links">@zimablue.co</a></p>
