--- a/404.html
+++ b/404.html
@@ -51,8 +51,7 @@
                             <a class="navbar-item has-text-black is-uppercase" href="#services"> Услуги </a>
                             <a class="navbar-item has-text-black is-uppercase" href="#research"> Исследования </a>
                             <a class="navbar-item has-text-black is-uppercase" href="#feedback"> Отзывы </a>
-                            <a class="navbar-item has-text-black is-uppercase"
-                                href="https://t.me/+77066396195"
+                            <a class="navbar-item has-text-black is-uppercase" href="https://t.me/+77066396195"
                                 target="_blank"> Заказать исследование </a>
                         </div>
                     </div>
@@ -124,8 +123,7 @@
                                     текущих
                                     и&nbsp;потенциальных клиентов
                                 </p>
-                                <a class="button is-white is-outlined is-rounded"
-                                    href="https://t.me/+77066396195"
+                                <a class="button is-white is-outlined is-rounded" href="https://t.me/+77066396195"
                                     target="_blank">Заказать исследование</a>
                                 <p class="is-hidden-tablet"></p>
                             </div>
@@ -154,8 +152,7 @@
                                     Анализ данных, полученных с&nbsp;помощью большого количества опрошенных респондентов
                                     в&nbsp;ходе опроса или анкетирования
                                 </p>
-                                <a class="button is-white is-outlined is-rounded"
-                                    href="https://t.me/+77066396195"
+                                <a class="button is-white is-outlined is-rounded" href="https://t.me/+77066396195"
                                     target="_blank">Заказать исследование</a>
                                 <p class="is-hidden-tablet"></p>
                             </div>
@@ -186,8 +183,7 @@
                                     Поиск, сбор и&nbsp;анализ информации, которая обеспечивает потребности маркетинга
                                     компании
                                 </p>
-                                <a class="button is-white is-outlined is-rounded"
-                                    href="https://t.me/+77066396195"
+                                <a class="button is-white is-outlined is-rounded" href="https://t.me/+77066396195"
                                     target="_blank">Заказать исследование</a>
                                 <p class="is-hidden-tablet"></p>
                             </div>
@@ -570,7 +566,7 @@
             </div>
         </div>
     </section>
-    <section class="section has-background-white is-medium" id="partners">
+    <section class="section has-background-white is-small" id="partners">
         <div class="container">
             <div class="columns">
                 <div class="column is-four-fifths">
@@ -583,48 +579,66 @@
         </div>
     </section>
     <section class="has-background-white is-medium" style="padding-bottom: 144px;">
-        <div class="services-ticker-block" style="margin-top: 0;">
-            <div class="stb_line_single">
-                <a class="stb-item is-clickable">
-                    <img src="src/img/partners/airastana.svg" alt="Air Astana" class="logo-partners is-clickable" />
-                </a>
-                <a class="stb-item is-clickable">
-                    <img src="src/img/partners/bigroup.svg" alt="BI Group" class="logo-partners is-clickable" />
-                </a>
-                <a class="stb-item is-clickable">
-                    <img src="src/img/partners/glovo.svg" alt="Glovo" class="logo-partners is-clickable" />
-                </a>
-                <a class="stb-item is-clickable">
-                    <img src="src/img/partners/homecreditbank.svg" alt="Home Credit Bank"
-                        class="logo-partners is-clickable" />
-                </a>
-                <a class="stb-item is-clickable">
-                    <img src="src/img/partners/jusan.svg" alt="Jusan" class="logo-partners is-clickable" />
-                </a>
-                <a class="stb-item is-clickable">
-                    <img src="src/img/partners/olx.svg" alt="OLX" class="logo-partners is-clickable" />
-                </a>
-                <a class="stb-item is-clickable">
-                    <img src="src/img/partners/acca.svg" alt="OLX" class="logo-partners is-clickable" />
-                </a>
-                <a class="stb-item is-clickable">
-                    <img src="src/img/partners/tele2.svg" alt="Tele2" class="logo-partners is-clickable" />
-                </a>
-                <a class="stb-item is-clickable">
-                    <img src="src/img/partners/1fit.svg" alt="Tele2" class="logo-partners is-clickable" />
-                </a>
-                <a class="stb-item is-clickable">
-                    <img src="src/img/partners/yandexgo.svg" alt="Yandex Go" class="logo-partners is-clickable" />
-                </a>
-                <a class="stb-item is-clickable">
-                    <img src="src/img/partners/acouncil.svg" alt="Yandex Go" class="logo-partners is-clickable" />
-                </a>
-                <a class="stb-item is-clickable">
-                    <img src="src/img/partners/isos.svg" alt="Yandex Go" class="logo-partners is-clickable" />
-                </a>
-                <a class="stb-item is-clickable">
-                    <img src="src/img/partners/kazchem.svg" alt="Yandex Go" class="logo-partners is-clickable" />
-                </a>
+        <div class="wrap">
+            <div class="items-wrap">
+                <div class="items marquee">
+                    <div class="item"></div>
+                    <div class="item"></div>
+                    <div class="item"></div>
+                    <div class="item"></div>
+                    <div class="item"></div>
+                    <div class="item"></div>
+                    <div class="item"></div>
+                    <div class="item"></div>
+                    <div class="item"></div>
+                    <div class="item"></div>
+                    <div class="item"></div>
+                    <div class="item"></div>
+                </div>
+                <div aria-hidden="true" class="items marquee">
+                    <div class="item"></div>
+                    <div class="item"></div>
+                    <div class="item"></div>
+                    <div class="item"></div>
+                    <div class="item"></div>
+                    <div class="item"></div>
+                    <div class="item"></div>
+                    <div class="item"></div>
+                    <div class="item"></div>
+                    <div class="item"></div>
+                    <div class="item"></div>
+                    <div class="item"></div>
+                </div>
+            </div>
+            <div class="items-wrap">
+                <div class="items marquee reverce">
+                    <div class="item"></div>
+                    <div class="item"></div>
+                    <div class="item"></div>
+                    <div class="item"></div>
+                    <div class="item"></div>
+                    <div class="item"></div>
+                    <div class="item"></div>
+                    <div class="item"></div>
+                    <div class="item"></div>
+                    <div class="item"></div>
+                    <div class="item"></div>
+                    <div class="item"></div>
+                </div>
+                <div aria-hidden="true" class="items marquee reverce">
+                    <div class="item"></div>
+                    <div class="item"></div>
+                    <div class="item"></div>
+                    <div class="item"></div>
+                    <div class="item"></div>
+                    <div class="item"></div>
+                    <div class="item"></div>
+                    <div class="item"></div>
+                    <div class="item"></div>
+                    <div class="item"></div>
+                    <div class="item"></div>
+                    <div class="item"></div>
+                </div>
             </div>
         </div>
     </section>
@@ -654,9 +668,8 @@
                 <a class="tag" href="#benefits"> Преимущества </a>
                 <a class="tag" href="#research"> Исследования </a>
                 <a class="tag" href="#feedback"> Отзывы </a>
-                <a class="tag" href="https://t.me/+77066396195"
-                    target="_blank"> Заказать исследование <svg width="21" height="23" viewBox="0 0 21 23" fill="none"
-                        xmlns="http://www.w3.org/2000/svg">
+                <a class="tag" href="https://t.me/+77066396195" target="_blank"> Заказать исследование <svg width="21"
+                        height="23" viewBox="0 0 21 23" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <g clip-path="url(#clip0_379_44)">
                             <path
                                 d="M14.8361 22.308C19.8174 20.4956 21.4577 16.6271 19.4339 11.0695L18.7011 9.04077C17.9582 6.99839 16.4994 6.11509 15.3666 6.52524C15.1127 6.61314 15.0248 6.79868 15.1127 7.04282L15.5147 8.15503C15.6468 8.51509 15.5312 8.77476 15.3039 8.85728C15.0698 8.94282 14.8095 8.81821 14.6774 8.45815L14.4023 7.69751C13.9598 6.47378 12.8789 5.9562 11.8242 6.34683C11.3359 6.52261 11.1992 6.79605 11.3457 7.19946L11.8845 8.67301C12.0067 9.03307 11.8912 9.2897 11.6706 9.37525C11.4328 9.45777 11.1762 9.33316 11.0471 8.97612L10.5474 7.61372C10.0494 6.23677 9.01121 5.87847 7.97908 6.24956C7.52986 6.41558 7.36385 6.71831 7.5073 7.10894L8.52459 9.90084C8.64988 10.2542 8.53435 10.5176 8.31375 10.5964C8.07293 10.6856 7.81931 10.561 7.68728 10.201L4.53123 1.53794C4.21199 0.659037 3.47146 0.309818 2.72927 0.583256C1.96922 0.860404 1.61834 1.60395 1.93084 2.48286L6.38553 14.7107C6.48387 14.9923 6.35017 15.2213 6.14812 15.2896C5.97469 15.3519 5.78172 15.3152 5.55574 15.0727L2.3822 11.7305C1.89763 11.2129 1.40262 11.1145 0.919021 11.291C0.10242 11.587 -0.16096 12.311 0.0929467 12.9909C0.17781 13.2297 0.308474 13.4317 0.451247 13.6166L4.54265 18.7983C7.52849 22.584 11.2537 23.6163 14.8361 22.308Z"
