fix old changes

--- a/404.html
+++ b/404.html
@@ -328,7 +328,7 @@
                                     возрастная категория считает гендерное равенство важной проблемой для бизнеса
                                 </p>
                                 <a class="button is-white is-outlined is-rounded"
-                                    href="https://drive.google.com/file/d/1KTiYfIITLTVd-niElvJmANgxosF56pCT/view"
+                                    href="https://drive.google.com/file/d/11XrglK6ucMtfzuvp-t6n_XHD77mc-7P2/view?usp=sharing"
                                     target="_blank">Скачать исследование</a>
                                 <p class="is-hidden-tablet"></p>
                             </div>
@@ -340,7 +340,33 @@
                 </div>
             </div>
             <div class="columns">
-                <div class="column is-hidden-mobile"></div>
+                <div class="column">
+                    <div class="flip-card cards-service">
+                        <div class="flip-card-inner">
+                            <div
+                                class="flip-card-front is-flex is-flex-direction-column is-justify-content-space-between">
+                                <p class="title">
+                                    Влияние на&nbsp;покупательские решения и&nbsp;<i>узнаваемость бренда</i>
+                                </p>
+                            </div>
+                            <div
+                                class="flip-card-back is-flex is-flex-direction-column is-justify-content-space-between">
+                                <p class="subtitle has-text-white">
+                                    Исследование влияния маркетинга с&nbsp;участием инфлюенсеров на&nbsp;покупательские
+                                    решения и&nbsp;узнаваемость брендаИсследование влияния маркетинга с&nbsp;участием
+                                    инфлюенсеров на&nbsp;покупательские решения и&nbsp;узнаваемость бренда
+                                </p>
+                                <a class="button is-white is-outlined is-rounded"
+                                    href="https://drive.google.com/file/d/1GcpmWFDdWpP3ZgB2VpQF5fAfd_7Ao37r/view"
+                                    target="_blank">Скачать исследование</a>
+                                <p class="is-hidden-tablet"></p>
+                            </div>
+                        </div>
+                        <button class="flip-icon" onclick="toggleIcon(this)">
+                            <span class="icon ignoreMe"></span>
+                        </button>
+                    </div>
+                </div>
                 <div class="column">
                     <div class="flip-card cards-service">
                         <div class="flip-card-inner">
@@ -357,7 +383,7 @@
                                     от&nbsp;заработной платы занимает ежемесячный платеж?
                                 </p>
                                 <a class="button is-white is-outlined is-rounded"
-                                    href="https://drive.google.com/file/d/1XLH2M8siL9mjjlCgyAHlsvjm7ajfBpu5/view"
+                                    href="https://drive.google.com/file/d/1UyUjvfAOSuIH1AtopdgcXvIP3KNy0GSe/view?usp=sharing"
                                     target="_blank">Скачать исследование</a>
                                 <p class="is-hidden-tablet"></p>
                             </div>
@@ -433,7 +459,7 @@
                         <div class="cards-service">
                             <div class="is-flex is-flex-direction-column is-justify-content-space-between">
                                 <p class="title">
-                                    Организация показала высокий уровень проффесионализма и&nbsp;компетентности
+                                    Организация показала высокий уровень професионализма и&nbsp;компетентности
                                     в&nbsp;аспектах продвижения проектов в&nbsp;онлайн среде
                                 </p>
                                 <p class="subtitle">
@@ -566,7 +592,7 @@
             </div>
         </div>
     </section>
-    <section class="section has-background-white is-small" id="partners">
+    <section class="section has-background-white is-medium" id="partners">
         <div class="container">
             <div class="columns">
                 <div class="column is-four-fifths">
@@ -651,8 +677,8 @@
                         <p>Контакты</p>
                     </div>
                     <p class="has-text-black is-black is-size-3">email: <a
-                            href="mailto:info@zimablue.org?subject=Здравствуйте, хочу заказать исследование"
-                            target="_blank" class="text-links">info@zimablue.org</a></p>
+                            href="mailto:info@zimablue.net?subject=Здравствуйте, хочу заказать исследование&cc=farangizashukasheva@gmail.com"
+                            target="_blank" class="text-links">info@zimablue.net</a></p>
                     <p class="has-text-black is-black is-size-3">instagram: <a
                             href="https://www.instagram.com/zimablue.co/" target="_blank"
                             class="text-links">@zimablue.co</a></p>
