added new slides

--- a/404.html
+++ b/404.html
@@ -410,7 +410,7 @@
                                     потребляют контент и&nbsp;почему они делают такой выбор?
                                 </p>
                                 <a class="button is-white is-outlined is-rounded"
-                                    href="https://drive.google.com/file/d/1kcNDinL1lr5RueZKKWmKS41pSVjuydLu/view"
+                                    href="https://docs.google.com/presentation/d/1pt2nUPJ0i8NZTvzxZPEuK7T3X6NJF667/edit#slide=id.p1"
                                     target="_blank">Скачать исследование</a>
                                 <p class="is-hidden-tablet"></p>
                             </div>
@@ -419,6 +419,39 @@
                             <span class="icon ignoreMe"></span>
                         </button>
                     </div>
+                </div>
+            </div>
+            <div class="columns">
+                <div class="column">
+                    <div class="flip-card cards-service">
+                        <div class="flip-card-inner">
+                            <div
+                                class="flip-card-front is-flex is-flex-direction-column is-justify-content-space-between">
+                                <p class="title">
+                                    Реклама vs&nbsp;Скидки: Что <i>Реально Влияет</i> на&nbsp;Продажи в&nbsp;2025 году
+                                </p>
+                            </div>
+                            <div
+                                class="flip-card-back is-flex is-flex-direction-column is-justify-content-space-between">
+                                <p class="subtitle has-text-white">
+                                    Какие рекламные и&nbsp;скидочные механики реально влияют на&nbsp;поведение потребителей в&nbsp;Казахстане
+                                </p>
+                                <a class="button is-white is-outlined is-rounded"
+                                    href="https://drive.google.com/file/d/1Y80jc3wl4pYayqV0Cgafee_Sp5ISSW8h/view"
+                                    target="_blank">Скачать исследование</a>
+                                <p class="is-hidden-tablet"></p>
+                            </div>
+                        </div>
+                        <button class="flip-icon" onclick="toggleIcon(this)">
+                            <span class="icon ignoreMe"></span>
+                        </button>
+                    </div>
+                </div>
+                <div class="column">
+                    
+                </div>
+                <div class="column">
+                    
                 </div>
             </div>
         </div>
